july   12, 2001 : John Firebaugh
	When comparing files, you can apply or unapply changes and save
	the result.
	New menu item "Show Text View" (loads the diff in embedded text viewer).
	Better status notification.
	Set the window caption when comparing.
june   27, 2001 : John Firebaugh
	Ported main view to QListView
	Remove obsolete files
	Clicking a difference in the main view selects it
	Better scrolling
june   24, 2001 : John Firebaugh
	Coverted to dock window and added navigation tree in a dock.
	Multiple file diffs are now supported. Each file will show up
	as an item in the tree, with differences as children.
june   22, 2001 : Otto Bruggeman
	Tried implementing rcs and ed but they dont work atm, same for show
	diffstats, will fix that asap.
may    22, 2001 : John Firebaugh
	Reworking of most of the view code. Looks pretty.
may    18, 2001 : Otto Bruggeman
	Context seems to work, implemented saving... might have some problems
	left (saving that is)
may    15, 2001 : John Firebaugh
	Make the settings work for all windows. Probably some more changes :)
may    14, 2001 : Otto Bruggeman
	context diff does not work atm, there is some problem with the separa-
	tion of old and new. Maybe the old and new needs to be reintegrated.
	I fixed some functions and now diffmodel does no longer need static
	functions. All loading is done from the kdiffpart and that is where
	save should go as well. Removed determineDiffFormat because it is not
	needed anymore.
may    13, 2001 : Otto Bruggeman
	contextdiff is better implemented it finds all stuff in the diff atm
	but it does not work.
may     4, 2001 : Otto Bruggeman
	cleaned up the code by moving the part to a subdir
	halfassed implementation of contextdiff, will update later today
april  10, 2001 : John Firebaugh
	use new model/view architecture (not completely implemented yet)
	NOTE: it will (should) compile, but you won't see any differences... a
	work in progress
april  5th, 2001 : Otto Bruggeman