@@ -8,5 +8,4 @@ In descending order of importance:
 * merge text view GUI
 * the tree view should show directory structure
 * add support for incremental patch saving (i'll explain if anyone wants to know)
-* add icons for most menu options (almost done, using standard icons now for most)
 * Add support for diff3 (that is comparing 3 files at once)
