@@ -1,3 +1,6 @@
+july   12, 2001 : Otto Bruggeman
+	Stats work now, maybe they need more info but i dont know what yet.
+	Will think some more about it.
 july   12, 2001 : John Firebaugh
 	When comparing files, you can apply or unapply changes and save
 	the result.
